--- a/src/app/events/event-details/event-details.component.html
+++ b/src/app/events/event-details/event-details.component.html
@@ -24,6 +24,14 @@
 
     <hr>
 
-    <session-list [sessions]="event?.sessions"></session-list>
+    <div class="row">
+      <div class="col-md-10">
+        <h3 style="margin:0">Sessions</h3>
+        <a style="float:right;" (click)="addSession()">Add Session</a>
+      </div>
+    </div>
+
+    <session-list *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
+    <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelAddSession)="cancelAddSession()"></create-session>
 
   </div>
