--- a/src/app/events/event-details/event-details.component.html
+++ b/src/app/events/event-details/event-details.component.html
@@ -24,14 +24,22 @@
 
     <hr>
 
-    <div class="row">
-      <div class="col-md-10">
+    <div class="row" style="margin-bottom:10px">
+      <div class="col-md-2">
         <h3 style="margin:0">Sessions</h3>
-        <a style="float:right;" (click)="addSession()">Add Session</a>
+      </div>
+      <div class="col-md-7">
+        <button class="btn btn-default" [class.active]="filterBy==='all'" (click)="filterBy='all'">All</button>
+        <button class="btn btn-default" [class.active]="filterBy==='beginner'" (click)="filterBy='beginner'">Beginner</button>
+        <button class="btn btn-default" [class.active]="filterBy==='intermediate'" (click)="filterBy='intermediate'">Intermidiate</button>
+        <button class="btn btn-default" [class.active]="filterBy==='advanced'" (click)="filterBy='advanced'">Advanced</button>
+      </div>
+      <div class="col-md-2">
+        <a (click)="addSession()">Add Session</a>
       </div>
     </div>
 
-    <session-list *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
+    <session-list [filterBy]="filterBy" *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
     <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelAddSession)="cancelAddSession()"></create-session>
 
   </div>
