--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -30,9 +30,9 @@
             </li>
           </ul>
         </div>
-        <form id="searchForm"  class="navbar-form navbar-right"  >
+        <form id="searchForm" (ngSubmit)="searchSessions(searchTerm)" class="navbar-form navbar-right"  >
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search Sessions" >
+            <input type="text" [(ngModel)]="searchTerm" name="searchTerm" class="form-control" placeholder="Search Sessions" >
           </div>
           <button class="btn btn-default" >
             Search
@@ -41,3 +41,9 @@
       </div>
     </div>
   </div>
+
+  <simple-modal title="Matching Sessions">
+    <div class="list-group">
+      <a class="list-group-item" *ngFor="let session of foundSessions" [routerLink]="['/events', session.eventId]">{{session.name}}</a>
+    </div>
+  </simple-modal>
