--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -34,7 +34,7 @@
           <div class="form-group">
             <input type="text" [(ngModel)]="searchTerm" name="searchTerm" class="form-control" placeholder="Search Sessions" >
           </div>
-          <button class="btn btn-default" >
+          <button class="btn btn-default" modal-trigger>
             Search
           </button>
         </form>
