--- a/src/app/user/profile.component.html
+++ b/src/app/user/profile.component.html
@@ -17,6 +17,8 @@
   
         <button type="submit" class="btn btn-primary">Save</button>
         <button type="button" (click)="cancel()" class="btn btn-default">Cancel</button>
+
+        <button type="button" (click)="logout()" class="btn btn-warning" style="float: right">Logout</button>
       </form>
     </div>
   </div>
